src/objects/Special_Event__c.object
<CustomObject>
    <description>Object for managing Events</description>
    <fields>
        <fullName>Accommodation_status__c</fullName>
        <description>Has accommodation been booked and by whom?</description>
        <inlineHelpText>Has accommodation been booked and by whom?</inlineHelpText>
        <label>Accommodation status</label>
        <picklist>
            <picklistValues>
                <fullName>Booked By BSC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Booked By Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Booked By Delivery Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Yet Booked</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <description>Opportunity Account Name</description>
        <formula>Opportunity__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Opportunity Account Name</inlineHelpText>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ad_Hoc_Fixed_Costs__c</fullName>
        <description>Calculates the sum of the related event costs where the type of cost is Fixed</description>
        <inlineHelpText>Calculates the sum of the related event costs where the type of cost is Fixed</inlineHelpText>
        <label>Ad Hoc Fixed Costs</label>
        <summarizedField>Special_Event_Cost__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Special_Event_Cost__c.Type__c</field>
            <operation>equals</operation>
            <value>Fixed</value>
        </summaryFilterItems>
        <summaryForeignKey>Special_Event_Cost__c.BSC_Event__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Ad_Hoc_Variable_Costs__c</fullName>
        <description>Calculates the sum of the related event costs where the type of cost is Variable</description>
        <inlineHelpText>Calculates the sum of the related event costs where the type of cost is Variable</inlineHelpText>
        <label>Ad Hoc Variable Costs</label>
        <summarizedField>Special_Event_Cost__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Special_Event_Cost__c.Type__c</field>
            <operation>equals</operation>
            <value>Variable</value>
        </summaryFilterItems>
        <summaryForeignKey>Special_Event_Cost__c.BSC_Event__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Add_Remove_Bookings__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Use this to Allow the Sales rep to add / remove bookings within 21 days of event Start date</description>
        <inlineHelpText>Use this to Allow the Sales rep to add / remove bookings within 21 days of event Start date</inlineHelpText>
        <label>Auth. Add/Remove Bookings</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allow_Overbooking__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If ticked the number of confirmed bookings can exceed the maximum delegates</description>
        <inlineHelpText>If ticked the number of confirmed bookings can exceed the maximum delegates</inlineHelpText>
        <label>Allow Overbooking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alternative_Certificate_Course_Name__c</fullName>
        <description>This is a text field that can be edited by logistics</description>
        <inlineHelpText>This is a text field that can be edited by logistics</inlineHelpText>
        <label>Alternative Certificate Course Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Approved_for_Resourcing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Tick box for Dave Parr to confirm that he has checked requirements and that logistics can now resource</description>
        <inlineHelpText>Tick box for Dave Parr to confirm that he has checked requirements and that logistics can now resource</inlineHelpText>
        <label>Approved for Resourcing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attendance_Certificates_Despatched__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To be ticked when certificates have been despatched in the post</description>
        <inlineHelpText>To be ticked when certificates have been despatched in the post</inlineHelpText>
        <label>Attendance Certificates Despatched</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Audit_Number_of_Days__c</fullName>
        <description>Number of days for the Audit or Advisory Session</description>
        <inlineHelpText>Number of days for the Audit or Advisory Session</inlineHelpText>
        <label>Audit: Number of Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Available_places__c</fullName>
        <formula>Maximum_Places__c -  No_of_Delegates_Booked__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of places available (maximum places minus confirmed places)</inlineHelpText>
        <label>Available places</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_Variable_Costs__c</fullName>
        <description>Calculates the average costs of the related event costs where the type is variable and there is at least 1 delegate</description>
        <formula>IF((No_of_Delegates_Booked__c &lt;&gt;0),

Total_Variable_Costs__c /  No_of_Delegates_Booked__c ,
null


)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculates the average costs of the related event costs where the type is variable and there is at least 1 delegate</inlineHelpText>
        <label>Average Variable Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Average_Variable_Revenue__c</fullName>
        <description>Calculates the average revenue based on delegate fees divided by the number of delegates booked.</description>
        <formula>IF( No_of_Delegates_Booked__c &gt;0,
Delegate_Fees__c  / No_of_Delegates_Booked__c,
null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculates the average revenue based on delegate fees divided by the number of delegates booked.</inlineHelpText>
        <label>Average Variable Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BSC_Transfer_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Tick this box if no transfer fees should be applied</description>
        <inlineHelpText>Tick this box if no transfer fees should be applied</inlineHelpText>
        <label>BSC Transfer Request (no fees to apply)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Certificate_Course_Name__c</fullName>
        <description>Formula to select the name specified in the field &quot;Alternative Certificate Course Name&quot; where not blank or this selects the product name but removes any text on the product name that appear after an open bracket</description>
        <formula>IF 
( 
!ISBLANK( Alternative_Certificate_Course_Name__c ), Alternative_Certificate_Course_Name__c,
IF(FIND(&quot;(&quot;,Product__r.Name )=0, Product__r.Name, LEFT(Product__r.Name , FIND(&quot;(&quot;,Product__r.Name ) -1) 
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula to select the name specified in the field &quot;Alternative Certificate Course Name&quot; where not blank or this selects the product name but removes any text on the product name that appear after an open bracket</inlineHelpText>
        <label>Course Name to appear on Certificate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>Select the city that the event will be taking place</description>
        <inlineHelpText>Select the city that the event will be taking place</inlineHelpText>
        <label>City</label>
        <picklist>
            <picklistValues>
                <fullName>Aberdeen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belfast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Birmingham</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bristol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cardiff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crawley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dundee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Durham</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Edinburgh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exeter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glasgow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Huntingdon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>London</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manchester</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sheffield</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stirling</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Client_Provisional_Expiry_Date__c</fullName>
        <description>Date on which time out will occur</description>
        <inlineHelpText>Date by which the customer has to confirm the event before it times out</inlineHelpText>
        <label>Client Provisional Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Client_Provisional_Extension_Granted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If ticked an extension to the number of days a client has been granted to confirm the booking</description>
        <inlineHelpText>Has an extension to the number of days a client has been granted?</inlineHelpText>
        <label>Client Provisional Extension Granted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Courier_Costs__c</fullName>
        <defaultValue>50.00</defaultValue>
        <description>Courier costs for event</description>
        <inlineHelpText>Courier costs for event</inlineHelpText>
        <label>Courier Costs</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Course_Note_Costs__c</fullName>
        <description>Costs (per delegate) for the course notes</description>
        <inlineHelpText>Costs (per delegate) for the course notes</inlineHelpText>
        <label>Course Note Costs</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Course_Notes_Sent_To_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes course notes have been sent to customer</description>
        <inlineHelpText>Tick this box when course notes have been sent to customer</inlineHelpText>
        <label>Course Notes Sent To Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Course_Notes_Sent_To_Print__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes that course notes have been sent to printer</description>
        <inlineHelpText>Denotes that course notes have been sent to printer</inlineHelpText>
        <label>Course Notes Sent To Print</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Course_Notes_Tracking_URL__c</fullName>
        <description>Courier tracking number before you tick the</description>
        <inlineHelpText>Enter the Courier tracking number before you tick the</inlineHelpText>
        <label>Course Notes Tracking URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Course_Reference__c</fullName>
        <description>Mapped from Course_Ref in the source Course table in CB</description>
        <inlineHelpText>Course_Ref migrated from Course Booker</inlineHelpText>
        <label>Course Reference</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Margin__c</fullName>
        <description>Calculates the current profit divided by the total costs</description>
        <formula>(Current_Profit__c / Grand_Total_Costs__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculates the current profit divided by the total costs</inlineHelpText>
        <label>Current Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Current_Profit__c</fullName>
        <description>Calculates the total revenue minus the total costs</description>
        <formula>Grand_Total_Revenue__c - Grand_Total_Costs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculates the total revenue minus the total costs</inlineHelpText>
        <label>Current Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_Cancellation_Transfer_Date__c</fullName>
        <description>The date and time on which the customer asked for the transfer or cancellation.</description>
        <inlineHelpText>The date and time on which the customer asked for the transfer or cancellation.</inlineHelpText>
        <label>Customer Cancellation/Transfer Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Course_Notes_Sent_To_Customer__c</fullName>
        <description>Date course notes sent to customer</description>
        <inlineHelpText>Auto populated when Course Notes Sent To Customer is set to true</inlineHelpText>
        <label>Date Course Notes Sent To Customer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Course_Notes_Sent_To_Print__c</fullName>
        <description>The date the Sent to Print field is set to true. Populated by Workflow</description>
        <inlineHelpText>Auto populated when the sent to print field is set to true</inlineHelpText>
        <label>Date Course Notes Sent To Print</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Visa_Ordered__c</fullName>
        <description>Date order was pllaced for visa</description>
        <inlineHelpText>Date order was pllaced for visa</inlineHelpText>
        <label>Date Visa Ordered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Visa_Received__c</fullName>
        <description>Date visa was received</description>
        <inlineHelpText>Date visa was received</inlineHelpText>
        <label>Date Visa Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delegate_Fees__c</fullName>
        <description>Calculates the sum of the related event booking.booking fee&apos;s where the event booking status has been confirmed, attended or no show</description>
        <inlineHelpText>Calculates the sum of the related event booking.booking fee&apos;s where the event booking status has been confirmed, attended or no show</inlineHelpText>
        <label>Delegate Fees</label>
        <summarizedField>Special_Event_Booking__c.Booking_Fee__c</summarizedField>
        <summaryFilterItems>
            <field>Special_Event_Booking__c.Status__c</field>
            <operation>equals</operation>
            <value>Confirmed, Attended, No Show</value>
        </summaryFilterItems>
        <summaryForeignKey>Special_Event_Booking__c.Special_Event__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Delegate_Form_Link__c</fullName>
        <formula>&apos;/apex/BSCDelegateCapture?id=&apos;+Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delegate Form Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delegate_Pack_Costs__c</fullName>
        <description>Cost (per delegate) for the delegate pack</description>
        <inlineHelpText>Cost (per delegate) for the delegate pack</inlineHelpText>
        <label>Delegate Pack Costs</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Delegates_Needed__c</fullName>
        <description>Number of delegates needed to reach target margin (credit DG)</description>
        <formula>ABS(CEILING(

( Target_Contribution_Event__c * Transfer_Cancellation_Fees__c -( Transfer_Cancellation_Fees__c - Total_Fixed_Costs__c ))
/
( (Average_Variable_Revenue__c - Average_Variable_Costs__c )-( Target_Contribution_Event__c * Average_Variable_Revenue__c ))
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of delegates needed to reach target contribution</inlineHelpText>
        <label>Additional Confirmed Delegates Needed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_4__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is for finance and pulls in the event reference</description>
        <inlineHelpText>This is for finance and pulls in the event reference</inlineHelpText>
        <label>Dimension 4</label>
        <referenceTo>c2g__codaDimension4__c</referenceTo>
        <relationshipLabel>BSC Events</relationshipLabel>
        <relationshipName>BSC_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <description>Calculates the number of days the event takes place using the start and end dates (this doesn&apos;t take into account gaps between unit days or weekends)</description>
        <formula>EndDate__c -StartDate__c +1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of days from Start to Finish</inlineHelpText>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <description>Date when Special Event ends.</description>
        <inlineHelpText>Date when Special Event ends.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date_10__c</fullName>
        <description>calculates the date of the event plus 10 days</description>
        <formula>EndDate__c + 10</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>calculates the date of the event plus 10 days</inlineHelpText>
        <label>End Date +10</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date_20__c</fullName>
        <description>calculates the date of the event plus 20 days</description>
        <formula>EndDate__c + 20</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>calculates the date of the event plus 20 days</inlineHelpText>
        <label>End Date +20</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EventDimension4__c</fullName>
        <formula>IF( Name=Dimension_4__r.Name , &apos;Matching - Event Name with Dimension &apos;, &apos;Not Matching - Event Name with Dimension&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EventDimension4</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Auto_Number__c</fullName>
        <description>Auto-number component of event reference</description>
        <displayFormat>{00000}</displayFormat>
        <inlineHelpText>Auto-number component of event reference</inlineHelpText>
        <label>Event Auto Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Event_Budget__c</fullName>
        <description>Money available for staging the Event from internal organisation budgets</description>
        <inlineHelpText>Money available for staging the Event from internal organisation budgets</inlineHelpText>
        <label>Internal Budget</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Event_Notes__c</fullName>
        <description>Any notes that are relevant to the event</description>
        <inlineHelpText>Any notes that are relevant to the event</inlineHelpText>
        <label>Event Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Expiry_Date_Client_Sales__c</fullName>
        <description>If the status of the event is resourced then adds the Sales Provisional Expiry Date, if the status is agreed then adds the Client Provisional Expiry Date.  Any other status and this field is blank.</description>
        <formula>IF(
ISPICKVAL(Status__c ,&quot;Resourced&quot;),
 Sales_Provisional_Expiry_Date__c ,
(IF(
ISPICKVAL(Status__c,&quot;Agreed&quot;),
 Client_Provisional_Expiry_Date__c ,
NULL)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If the status of the event is resourced then adds the Sales Provisional Expiry Date, if the status is agreed then adds the Client Provisional Expiry Date.  Any other status and this field is blank.</inlineHelpText>
        <label>Expiry Date (Client / Sales)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Flight_Reference_No__c</fullName>
        <description>Corporate traveler flight reference number</description>
        <inlineHelpText>Corporate traveler flight reference number</inlineHelpText>
        <label>Flight Reference No</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grand_Total_Costs__c</fullName>
        <description>calculates the total cost of the event by adding the fixed and variable costs</description>
        <formula>Total_Fixed_Costs__c + Total_Variable_Costs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>calculates the total cost of the event by adding the fixed and variable costs</inlineHelpText>
        <label>Grand Total Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Grand_Total_Revenue__c</fullName>
        <description>Calculates the total revenue but adding the delegate and penalty fees</description>
        <formula>Delegate_Fees__c + Transfer_Cancellation_Fees__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculates the total revenue but adding the delegate and penalty fees</inlineHelpText>
        <label>Grand Total Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>International__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether an event is international (outside the UK)</description>
        <inlineHelpText>Auto populated by venue region</inlineHelpText>
        <label>International</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Need to relate this to the number of Delegates accepted and the number of places in the Venue.</description>
        <inlineHelpText>Whether the Special Event is still open for Delegate / Speakers</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Visa_Required__c</fullName>
        <description>Is a visa required to travel?</description>
        <inlineHelpText>Is visa required to travel?</inlineHelpText>
        <label>Is Visa Required?</label>
        <picklist>
            <picklistValues>
                <fullName>TBA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Latest_Start_Date__c</fullName>
        <description>Field populated when provisional events are created from the opportunity</description>
        <inlineHelpText>Field populated when provisional events are created from the opportunity and is selected when using the request event wizard on the opportunity</inlineHelpText>
        <label>Latest Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Liability_at_Cancellation_Transfer__c</fullName>
        <description>The amount the liability cost was based on the point of time the Transfer or Cancellation was initiated.</description>
        <inlineHelpText>The amount the liability cost was based on the point of time the Transfer or Cancellation was initiated.</inlineHelpText>
        <label>Cancellation/Transfer Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Logistics_Team_Co_ordinator__c</fullName>
        <description>Used for the logistics team to decide who is taking responsibility for the logistics of the BSC Event.</description>
        <inlineHelpText>Used for the logistics team to decide who is taking responsibility for the logistics of the BSC Event.</inlineHelpText>
        <label>Operations Co-ordinator</label>
        <picklist>
            <picklistValues>
                <fullName>Giles Berry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kathryn Durkin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Natasha Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andrew Keane</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NVQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kim Shears</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Funmi Thompson</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Maximum_Places__c</fullName>
        <description>This is pulled from the maximum attendees held on the product when the event is first saved.</description>
        <inlineHelpText>Number of places available for Delegates at the Venue - i.e. maximum allowable Delegate acceptances.</inlineHelpText>
        <label>Maximum Places</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Migrated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to mark migrated data - this is considered when setting event ref number</description>
        <inlineHelpText>Checkbox to mark migrated data - this is considered when setting event ref number</inlineHelpText>
        <label>Migrated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Minimum_Places__c</fullName>
        <description>This is pulled from the minimum attendees held on the product when the event is first saved.</description>
        <inlineHelpText>Shows the minimum number of delegates to allow the course to go ahead.</inlineHelpText>
        <label>Minimum Places</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Delegates_Booked__c</fullName>
        <description>Roll up summary of the number of Event Booking objects linked to this event</description>
        <inlineHelpText>Count of Delegates who are: Confirmed, Attended, No Show</inlineHelpText>
        <label>Confirmed Bookings</label>
        <summaryFilterItems>
            <field>Special_Event_Booking__c.Status__c</field>
            <operation>equals</operation>
            <value>Confirmed, Attended, No Show</value>
        </summaryFilterItems>
        <summaryForeignKey>Special_Event_Booking__c.Special_Event__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID__c</fullName>
        <description>Pulls in the related opportunity id</description>
        <formula>Opportunity__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Pulls in the related opportunity id</inlineHelpText>
        <label>Opportunity ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Revenue__c</fullName>
        <description>Pulls in the related opportunity amount</description>
        <formula>Opportunity__r.Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Pulls in the related opportunity amount</inlineHelpText>
        <label>Opportunity Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is only for the In-Company events but is a lookup to the related opportunity</description>
        <inlineHelpText>This is only for the In-Company events but is a lookup to the related opportunity</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>BSC Events</relationshipLabel>
        <relationshipName>BSC_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Original_TnC_Liability__c</fullName>
        <description>Holds the original value of the Cancellation fee i.e. automatically computed.</description>
        <label>Original TnC Liability</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Outbound_Travel_Date__c</fullName>
        <description>Date delivery staff travel to event</description>
        <inlineHelpText>Date delivery staff travel to event</inlineHelpText>
        <label>Outbound Travel Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Override_Venue_Cost__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Tick to override the venue cost</description>
        <inlineHelpText>Tick to override the venue cost</inlineHelpText>
        <label>Override Venue Cost</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PK_CB_COURSE_ID__c</fullName>
        <description>This is the Primary Key of the Course (BSC Event) from the source Courses  data and maps to COURSE.COURSE_ID from the Course table in the CB database.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is a System Admin field</inlineHelpText>
        <label>PK_CB_COURSE_ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Printed_Not_required_Reason__c</fullName>
        <description>Enter the reason why course notes do not need to be printed for this event.
Pick list cannot be used as reasons are so varied</description>
        <inlineHelpText>Enter the reason why course notes do not need to be printed for this event</inlineHelpText>
        <label>Printed Not required Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Printing_Compnay__c</fullName>
        <description>Company printing course notes</description>
        <inlineHelpText>Company printing course notes</inlineHelpText>
        <label>Printing Company</label>
        <picklist>
            <picklistValues>
                <fullName>Datum</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Copywell</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Printing_Not_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If Course Notes do not need to be sent for this course</description>
        <inlineHelpText>If Course Notes do not need to be sent for this course, tick this box</inlineHelpText>
        <label>Printing Not Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Private__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the Event is Private True/False</description>
        <inlineHelpText>Indicates whether the Event is Private True/False</inlineHelpText>
        <label>Private</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Dimension_2__c</fullName>
        <description>Pulls in the related product dimension 2 code</description>
        <formula>Product__r.Dimension_2__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Pulls in the related product dimension 2 code</inlineHelpText>
        <label>Product Dimension 2</label>
        <type>Text</type>
    </fields>
</CustomObject>